Added simple CSS, Trading Predictor Theme

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
     <body>
 
-        <h1>Simple Message Generator</h1>
+        <h1>Magic Market Predictor</h1>
 
         <div id="messageDisplay">
             <!--Message Will Appear Here-->
         </div>
 
-        <button onclick="newMessage()">New Message</button>
+        <button onclick="newMessage()">New Prediction</button>
         
         <script src="messageScript.js"></script>
     </body>
