Changed html format to table for styling, added some CSS

--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     </head>
 
     <body>
+        <table id='table1'>
+            <tr>
+                <td>
+                    <h1>Magic Market Predictor</h1>
+                </td>
+            </tr>
+            <tr>
+                </td>
+                    <div id="messageDisplay">
+                        <!--Message Will Appear Here-->
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button onclick="newMessage()">New Prediction</button>
+                </td>
+            </tr>
+        </table>
 
-        <h1>Magic Market Predictor</h1>
-
-        <div id="messageDisplay">
-            <!--Message Will Appear Here-->
-        </div>
-
-        <button onclick="newMessage()">New Prediction</button>
-        
         <script src="messageScript.js"></script>
     </body>
 
