--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, intiial" />
         <title>Glass Landing Project</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css" />
     </head>
 
@@ -55,18 +58,18 @@
                             <h2 class="percentage">60%</h2>
                         </div>
                         <div class="card">
-                            <img src="./images/assassins.png" alt="">
+                            <img src="./images/sackboy.png" alt="">
                             <div class="card-info">
-                                <h2>Assassins Creed Valhalla</h2>
+                                <h2>Sackboy: Great Adventures</h2>
                                 <p>PS5 Version</p>
                                 <div class="progress"></div>
                             </div>
                             <h2 class="percentage">60%</h2>
                         </div>
                         <div class="card">
-                            <img src="./images/assassins.png" alt="">
+                            <img src="./images/spiderman.png" alt="">
                             <div class="card-info">
-                                <h2>Assassins Creed Valhalla</h2>
+                                <h2>Spiderman Miles Morrales</h2>
                                 <p>PS5 Version</p>
                                 <div class="progress"></div>
                             </div>
