Added active projects, customised images & borders

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="link">
                             <img src="./images/steam.png" alt="">
-                            <h2>Games</h2>
+                            <h2>Projects</h2>
                         </div>
                         <div class="link">
                             <img src="./images/upcoming.png" alt="">
@@ -38,42 +38,42 @@
                         </div>
                     </div>
                     <div class="pro">
-                        <h2>Join pro for free games.</h2>
+                        <h2>Join pro for free alpha.</h2>
                         <img src="./images/controller.png" alt="">
                     </div>
                 </div>
-                <div class="games">
+                <div class="projects">
                     <div class="status">
-                        <h1>Active Games</h1>
+                        <h1>Active Projects</h1>
                         <input type="text">
                     </div>
                     <div class="cards">
-                        <div class="card">
-                            <img src="./images/assassins.png" alt="">
+                        <div class="card full-stack">
+                            <img src="./images/full-stack.png" alt="">
                             <div class="card-info">
-                                <h2>Assassins Creed Valhalla</h2>
-                                <p>PS5 Version</p>
+                                <h2>Full Stack Dev Course</h2>
+                                <p>Qualifications | Portfolio | Roadmap</p>
                                 <div class="progress"></div>
                             </div>
-                            <h2 class="percentage">60%</h2>
+                            <h2 class="percentage">18%</h2>
                         </div>
-                        <div class="card">
-                            <img src="./images/sackboy.png" alt="">
+                        <div class="card swampverse">
+                            <img src="./images/swampverse.png" alt="">
                             <div class="card-info">
-                                <h2>Sackboy: Great Adventures</h2>
-                                <p>PS5 Version</p>
+                                <h2>Swampverse NFT</h2>
+                                <p>Currently holding 6 toads</p>
                                 <div class="progress"></div>
                             </div>
-                            <h2 class="percentage">60%</h2>
+                            <h2 class="percentage">18%</h2>
                         </div>
-                        <div class="card">
-                            <img src="./images/spiderman.png" alt="">
+                        <div class="card crypto">
+                            <img src="./images/crypto.png" alt="">
                             <div class="card-info">
-                                <h2>Spiderman Miles Morrales</h2>
-                                <p>PS5 Version</p>
+                                <h2>Crypto Investments</h2>
+                                <p>$ETH, $SOL, $STEP, $RSR</p>
                                 <div class="progress"></div>
                             </div>
-                            <h2 class="percentage">60%</h2>
+                            <h2 class="percentage">18%</h2>
                         </div>
                     </div>
                 </div>
