moved index to glassPage

--- a/glassPage.html
+++ b/glassPage.html
@@ -21,16 +21,16 @@
                     </div>
                     <div class="links">
                         <div class="link">
-                            <img src="./images/twitch.png" alt="">
-                            <h2>Streams</h2>
+                            <i class="fa fa-address-card" id="new-1">
+                            <h2>Personal Roadmap</h2>
                         </div>
                         <div class="link">
                             <img src="./images/steam.png" alt="">
-                            <h2>Projects</h2>
+                            <h2>Current Projects</h2>
                         </div>
                         <div class="link">
-                            <img src="./images/upcoming.png" alt="">
-                            <h2>New</h2>
+                            <i class="fa fa-area-chart" id="new-1">
+                            <h2>Watchlist</h2>
                         </div>
                         <div class="link">
                             <img src="./images/library.png" alt="">
