Mind boggling css at work

--- a/Projects/teacozyproject/index.html
+++ b/Projects/teacozyproject/index.html
@@ -4,58 +4,62 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <header class="nav">
-            <ul>
-                <li><div class="logo-img"></div></li>
-                <li>Mission</li>
-                <li>Featured Tea</li>
-                <li>Locations</li>
-            </ul>
-        </header>
-        <section class="main">
-            <div class="banner-img">
+
+        <nav class="navigation-bar">
+            <img src="/resources/img-tea-cozy-logo.png" alt="" class="logo">
+            <a href="#!">Mission</a>
+            <a href="#!">Featured Tea</a>
+            <a href="#!">Locations</a>
+        </nav>
+
+            <div class="banner">
+                <img src="/resources/img-mission-background.jpg">
                 <div class="banner-text">
                     <h2>Our Mission</h2>
+                    <br>
                     <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
                 </div>
             </div>
-        </section>
-        <section class="support-1">
+        <div class="support-1">
             <h2>Tea of the Month</h2>
             <h4>What's Steeping at The Tea Cozy?</h4>
-            <div class="support-collage">
-                <div class="support-img-1">
-                    <img src="resources/img-berryblitz.jpg">
-                    <h4>Fall Berry Blitz Tea</h4>
+                <div class="row-1">
+                    <div>
+                        <img src="resources/img-berryblitz.jpg" class="support-img">
+                        <p class="support-desc">Fall Berry Blitz Tea</p>
+                    </div>
+                    <div>
+                        <img src="resources/img-spiced-rum.jpg" class="support-img">
+                        <p class="support-desc">Spiced Rum Tea</p>
+                    </div>
+                    <div>
+                        <img src="resources/img-donut.jpg" class="support-img">
+                        <p class="support-desc">Seasonal Donuts</p>
+                    </div>
                 </div>
-                <div class="support-img-2">
-                    <img src="resources/img-spiced-rum.jpg">
-                    <h4>Spiced Rum Tea</h4>
+                <div class="row-2">
+                    <div>
+                        <img src="resources/img-myrtle-ave.jpg" class="support-img">
+                        <p class="support-desc">Myrtle Ave Tea</p>
+                    </div>
+                    <div>
+                        <img src="resources/img-bedford-bizarre.jpg" class="support-img">
+                        <p class="support-desc">Bedford Bizarre Tea</p>
+                    </div>
                 </div>
-                <div class="support-img-3">
-                    <img src="resources/img-donut.jpg">
-                    <h4>Seasonal Donuts</h4>
-                </div>
-                <div class="support-img-4">
-                    <img src="resources/img-myrtle-ave.jpg">
-                    <h4>Myrtle Ave Tea</h4>
-                </div>
-                <div class="support-img-5">
-                    <img src="resources/img-bedford-bizarre.jpg">
-                    <h4>Bedford Bizarre Tea</h4>
-                </div>
+        </div>
+        
+        <div class="img-container">
+            <img src="resources/img-locations-background.jpg">
+            <div class="location-title">
+            <h4>Locations</h4>
             </div>
-        </section>
-        <section class="support-2">
-            <div class="img-container">
-                <h4>Locations</h4>
-                <ul>
-                    <li><h3>Downtown</h3><p><br>384 West 4th St<br>Suite 108<br>Portland, Maine</p></li>
-                    <li><h3>East Bayside</h3><p><br>3433 Phisherman's Avenue<br>(Northwest Corner)<br>Portland, Maine</p></li>
-                    <li><h3>Oakdale</h3><p><br>515 Crescent Avenue<br>Second Floor<br>Portland, Maine</p></li>
-                </ul>
-            </div>
-        </section>
+                <div class="location-box-side-1"><h3>Downtown</h3><p><br>384 West 4th St<br>Suite 108<br>Portland, Maine</p></div>
+                <div class="location-box-center"><h3>East Bayside</h3><p><br>3433 Phisherman's Avenue<br>(Northwest Corner)<br>Portland, Maine</p></div>
+                <div class="location-box-side-2"><h3>Oakdale</h3><p><br>515 Crescent Avenue<br>Second Floor<br>Portland, Maine</p></div>
+            
+        </div>
+
         <section class="contact">
             <h2>The Tea Cozy</h2>
             <h5>contact@theteacozy.com</h5>
