Finished Tea Cozy Web Design Project

--- a/Projects/teacozyproject/index.html
+++ b/Projects/teacozyproject/index.html
@@ -61,9 +61,9 @@
         </div>
 
         <section class="contact">
-            <h2>The Tea Cozy</h2>
-            <h5>contact@theteacozy.com</h5>
-            <h5>917-555-8904</h5>
+            <h2>The Tea Cozy<br></h2>
+            <h5>contact@theteacozy.com<br></h5>
+            <h5>917-555-8904<br><br></h5>
         </section>
         <footer>copyright The Tea Cozy 2017</footer>
     </body>
